# 01-rcli

./: Cargo.toml  README.md  cliff.toml
fixtures/: blake3.txt  tmp.b64
src/: lib.rs  main.rs  opts.rs  process.rs  utils.rs
src/cliopts/: base64_opts.rs  csv_opts.rs  mod.rs  password_opts.rs  text.rs
src/process/: base64_p.rs  csv_convert.rs  gen_pass.rs  mod.rs  text_pass.rs
